# arps

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  release.yml
src/: __init__.py  cli.py  lib.py
src/psarps/: __init__.py  __main__.py  lib.py
tests/: test_lib.py
