[project]
name = "PSARPS"
version = "0.1.2"
description = "Get metadata about Planet Scope ARPS satellite imagery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cyclopts>=3.16.0",
    "geopy>=2.4.1",
    "proj>=0.2.0",
    "pyproj>=3.7.1",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "shapely>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
psarps = "psarps.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
